--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
 	"version": "5.3.0",
 	"private": true,
 	"scripts": {
-		"dev": "vite",
+		"dev": "vite --host",
 		"build": "vue-tsc --noEmit && vite build",
-		"serve": "vite preview"
+		"serve": "vite preview --host"
 	},
 	"dependencies": {
 		"@amap/amap-jsapi-loader": "^1.0.1",
